--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyPuppy</string>
+
     <string name="puppies">Puppies</string>
+    <string name="puppies_details">%d years • %s</string>
 </resources>
